Added 3D Lights and Post-list template

--- a/_posts/2025-01-01-Skate-Guy.markdown
+++ b/_posts/2025-01-01-Skate-Guy.markdown
@@ -3,7 +3,8 @@ layout: project
 title:  "Skate Guy"
 year: 2022
 #date:   0000-00-00 00:00:00 -0400
-categories: Video-Game
+categories: 'Video-Game'
+category-text: 'Video&nbsp;Game'
 thumbnail: SkateGuyThumbnail.png
 image-folder: '/assets/img/skate-guy/'
 
