--- a/_posts/2025-01-01-Skate-Guy.markdown
+++ b/_posts/2025-01-01-Skate-Guy.markdown
@@ -5,7 +5,7 @@ year: 2022
 #date:   0000-00-00 00:00:00 -0400
 categories: 'Video-Game'
 category-text: 'Video&nbsp;Game'
-thumbnail: SkateGuyThumbnail.png
+thumbnail: 'SkateGuyThumbnail.png'
 image-folder: '/assets/img/skate-guy/'
 
 game-engine: 'GameMaker Studio 2.'
