--- a/_posts/2025-05-05-Trauma.markdown
+++ b/_posts/2025-05-05-Trauma.markdown
@@ -5,7 +5,7 @@ year: 2025
 #date:   0000-00-00 00:00:00 -0400
 categories: 'Writing'
 category-text: 'Writing'
-thumbnail: Lisa.webp
+thumbnail: 'Lisa.webp'
 image-folder: '/assets/img/trauma/'
 #description: Fightcorin'
 
